# CaT4G-mac

./: .auto-claude-status  .claude_settings.json  .dockerignore  .env.example  .env.production.example  .gitignore  AGENTS.md  CHANGELOG.md  CLAUDE.md  Plans.md  README.md  REVIEW_REPORT.md  docker-compose.yml  eslint.config.js  index.html  package.json  tailwind.config.js  vite.config.ts
.github/workflows/: supabase-deploy.yml
.serena/: project.yml
docker/: Dockerfile.build  Dockerfile.dev
scripts/: detect-chord-issues.ts  fetch-chordsdb.mjs
specs/: 00_overview.md  01_architecture.md  02_database.md  03_frontend.md  04_backend_scraping.md  05_autoscroll.md  06_metronome.md  07_transpose.md  08_playlist.md  09_ui_design.md  10_dev_setup.md  10_song_editor_redesign.md  CLAUDE.md
src/: App.tsx  CLAUDE.md  index.css  routes.tsx
src-tauri/: CLAUDE.md  Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/migrations/: 001_initial.sql  002_section_overrides.sql  003_line_measures.sql
src-tauri/src/: CLAUDE.md  error.rs  http.rs  lib.rs  main.rs
src-tauri/src/parsers/: CLAUDE.md  chordwiki.rs  gakkime.rs  jtotal.rs  mod.rs  ufret.rs
src/components/: AddSongModal.tsx  AddSongsToPlaylistModal.tsx  CLAUDE.md  ChordDefaultsSettings.tsx  ChordDiagram.tsx  ChordDiagramHorizontal.tsx  ChordDiagramInline.tsx  ChordDiagramModal.tsx  ChordFingeringEditor.tsx  ChordFretGrid.tsx  ChordLine.tsx  ChordSheet.tsx  ConfirmDialog.tsx  ControlBar.tsx  CountInOverlay.tsx  CreatePlaylistModal.tsx  (+16 more)
supabase/: config.toml
(+126 files in other folders)
