[package]
name = "cat4g"
version = "0.1.0"
description = "Chords and Tabs for Guitar"
authors = ["CaT4G"]
edition = "2021"

[lib]
name = "cat4g_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = [] }
tauri-plugin-sql = { version = "2", features = ["sqlite"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "cookies", "gzip", "brotli", "deflate"] }
scraper = "0.20"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
regex = "1.10"
tauri-plugin-http = "2.5.6"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
